--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@
 @layer base {
   html,
   body {
-    @apply bg-gray-50 text-[#262626] dark:bg-[#262626] dark:text-gray-50;
+    @apply bg-[#e9e1ea] text-[#262626] dark:bg-[#262626] dark:text-gray-50;
     @apply min-h-screen;
   }
 
