revamp portfolio hanawidyatari

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,7 @@
   body {
     @apply bg-[#e9e1ea] text-[#262626] dark:bg-[#262626] dark:text-gray-50;
     @apply min-h-screen;
+    @apply w-full;
   }
 
   a {
