update add new page detail project

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,4 +18,11 @@
   * {
     box-sizing: border-box;
   }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    scrollbar-width: none;
+  }
 }
